deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homewrol-arch-otus
  labels:
    app: homework
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homework
  template:
    metadata:
      labels:
        app: homework
    spec:
      containers:
      - name: homework-app
        image: grunya404/homework1:latest
        ports:
           - name: web
             containerPort: 8000
        livenessProbe:
            httpGet:
              path: /live_probe
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 3
        readinessProbe:
            httpGet:
              path: /read_probe
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
