service.yml
apiVersion: v1
kind: Service
metadata:
  name: homework-service
spec:
  selector:
    app: homework
  ports:
    - protocol: TCP
      port: 8080
      targetPort: web
