ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: arch-homework
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: rewrite ^/otusapp/dgrunskiy/(.*)$ /hello/$1 last;
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            backend:
                serviceName: homework-service
                servicePort: web
          - path: /health
            backend:
              serviceName: homework-service
              servicePort: web
          - path: /hello/.*
            backend:
              serviceName: homework-service
              servicePort: web
